# CenterNet

./: README.md
data/custom/: dataset_3.json
readme/: INSTALL.md
src/: analisis_puntos.py  camera_params.py  capture.py  centernet_ros.py  datasetmaker.py  debug.py  demo.py  depth_test.py  full_calibration.py  kalman.py  main.py  neural.py  target_depth.py  test_images.py
src/ROS/: setup.sh
src/ROS/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/ROS/devel/lib/pkgconfig/: cv_bridge.pc  semantic_SLAM.pc
src/ROS/devel/lib/python3/dist-packages/cv_bridge/: __init__.py
src/ROS/devel/lib/python3/dist-packages/semantic_SLAM/msg/: _BoundingBox.py  _BoundingBoxes.py  _ObjectInfo.py  _ViconState.py  __init__.py
src/ROS/devel/share/common-lisp/ros/semantic_SLAM/msg/: BoundingBox.lisp  BoundingBoxes.lisp  DetectedObjects.lisp  ObjectInfo.lisp  ViconState.lisp  _package.lisp  (+5 more)
src/ROS/devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
src/ROS/devel/share/roseus/ros/semantic_SLAM/: manifest.l
src/ROS/devel/share/semantic_SLAM/cmake/: semantic_SLAM-msg-extras.cmake  semantic_SLAM-msg-paths.cmake  semantic_SLAMConfig.cmake
src/ROS/src/centernet_ros/src/: datasetmaker.py  detector.py
src/ROS/src/centernet_ros/src/detectors/: detector_factory.py
src/ROS/src/workspace/ros/bridge_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
src/ROS/src/workspace/ros/bridge_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/ROS/src/workspace/ros/semantic_slam_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
src/ROS/src/workspace/ros/semantic_slam_ws/src/centernet_ros/: CMakeLists.txt  package.xml  setup.py
src/ROS/src/workspace/ros/semantic_slam_ws/src/centernet_ros/msg/: detecciones.msg
src/ROS/src/workspace/ros/semantic_slam_ws/src/centernet_ros/src/: detector.py
src/herramientas/: capture.py
src/lib/: opts.py
src/lib/datasets/dataset/: custom.py
src/lib/datasets/sample/: ctdetplus.py
src/lib/detectors/: ctdetplus.py
src/lib/trains/: base_trainer.py  ctdetplus.py
src/tools/: eval_coco.py
(+361 files in other folders)
